--- a/views/index.html
+++ b/views/index.html
@@ -115,6 +115,7 @@
                 <p><a href="/">Accueil</a></p>
                 <p><a href="#produits">Produits</a></p>
                 <p><a href="/suivi">Suivi de commande</a></p>
+                <p><a href="/cgv">CGV</a></p>
                 <p><a href="/admin/login">Admin</a></p>
             </div>
             <div class="footer-section">
